--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,14 @@
 
   <body>
     <%= yield %>
+    <div class="footer">
+    	<% if logged_in? %>
+	    	<%= link_to "login", 		login_path %>
+	    	<%= link_to @user.name, user_path(@user) %>
+    	<% else %>
+    		<%= link_to "logout", 	logout_path %>
+    	<% end %>
+    	<%= link_to "root", root_path %>
+    </div>
   </body>
 </html>
