--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
   </head>
 
   <body>
+  	<% flash.each do |name, message| %>
+  		<div class="alert-#{name}">
+  			<%= message %>
+			</div>
+		<% end %>
     <%= yield %>
     <div class="footer">
     	<% if logged_in? %>
