sessions polished up and now working much better

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,12 +17,12 @@
     <%= yield %>
     <div class="footer">
     	<% if logged_in? %>
-	    	<%= link_to "logout", 	logout_path %>
-	    	<%= link_to @current_user.name, user_path(@current_user) %>
+	    	<%= link_to "logout", 	logout_path, method: :delete %>
+	    	<%= link_to "profile of #{@current_user.name}", current_user %>
     	<% else %>
 	    	<%= link_to "login", 		login_path %>
     	<% end %>
-    	<%= link_to "root", root_path %>
+    	<br><%= link_to "<< root", root_path %>
     </div>
   </body>
 </html>
