add Users index page, with a nice table with all their created events

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,8 @@
 	    	<%= link_to "login", 		login_path %>
     	<% end %>
     	<br><%= link_to "<< root", root_path %>
+      <br><%= link_to "users",  users_path %>
+          <%= link_to "events", events_path %>
     </div>
   </body>
 </html>
