--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <style>
       .centered { text-align: center; }
+      table { border-collapse: collapse; }
+      td,th { border: 1px white solid; }
     </style>
   </head>
 
