--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,3 @@
 <h1>Page for: <%=@user.name%></h1>
 
-<ul>
-	<% @user.created_events.each do |event| %>
-		<li><%=link_to event.name, '#' %></li>
-	<% end %>
-</ul>
+<%= render 'shared/content_table'%>
