--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,5 +10,5 @@
 <% if @user.invitations.any? %>
 	<h2>Invitations:</h2>
 <% else %>
-	<h2>no</h2>
+	<h2><%=@user.name%> still hasn't invitations</h2>
 <% end %>
