create _header and _flash partials

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,22 +14,9 @@
   </head>
 
   <body>
-  	<% flash.each do |name, message| %>
-  		<div class="alert-#{name}">
-  			<%= message %>
-			</div>
-		<% end %>
+    <%= render "layouts/header" %>
+    <br>
+    <%= render "layouts/flash" %>
     <%= yield %>
-    <div class="footer">
-    	<% if logged_in? %>
-	    	<%= link_to "logout", 	logout_path, method: :delete %>
-	    	<%= link_to "profile of #{@current_user.name}", current_user %>
-        <br><%= link_to "users",  users_path %>
-            <%= link_to "events", events_path %>
-      <% else %>
-	    	<%= link_to "login", 		login_path %>
-        <%= link_to "signup",   signup_path %>
-    	<% end %>
-    </div>
   </body>
 </html>
