add show Invitations in the User show page

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,9 @@
+<ul>stuff to do
+	<li>duplicated invitations (same user attending twice same event)</li>
+	<li>username and event name validations</li>
+	<li>nice css</li>
+</ul>
+
 <h1> all users </h1>
 
 <%= render 'shared/content_table' %>
