implement scopes for #past_events and #upcoming_events, shown in the User page for Invitations

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
 <% end %>
 
 <% if @user.invitations.any? %>
-	<h2>Invitations:</h2>
+	<h2>past invitations</h2>
 	<table>
 		<thead>
 			<tr>
@@ -16,17 +16,36 @@
 				<th><%=@second_column_title%></th>
 			</tr>
 		</thead>
-	<tbody>
-		<% @user.attended_events.each do |resource| %>
+		<tbody>
+			<% @prev_events.each do |resource| %>
+				<tr>
+					<td><%= link_to resource.name, resource%></td>
+					<td class=centered> 
+						<%= @proc.call(resource) %>
+					</td>
+				</tr>
+			<% end %>
+		</tbody>
+	</table>
+	<h2>future invitations</h2>
+	<table>
+		<thead>
 			<tr>
-				<td><%= link_to resource.name, resource%></td>
-				<td class=centered> 
-					<%= @proc.call(resource) %>
-				</td>
+				<th><%=@resource.first.class%> name</th>
+				<th><%=@second_column_title%></th>
 			</tr>
-		<% end %>
-	</tbody>
-</table>
+		</thead>
+		<tbody>
+			<% @upcoming_events.each do |resource| %>
+				<tr>
+					<td><%= link_to resource.name, resource%></td>
+					<td class=centered> 
+						<%= @proc.call(resource) %>
+					</td>
+				</tr>
+			<% end %>
+		</tbody>
+	</table>
 <% else %>
 	<h2><%=@user.name%> still hasn't invitations</h2>
 <% end %>
