--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,7 @@
 <h1>All events</h1>
 
 <h2><%= link_to "create a new event", new_event_path %></h2>
+<h2>upcoming events</h2>
 <table>
 	<thead>
 		<tr>
@@ -12,7 +13,36 @@
 		</tr>
 	</thead>
 	<tbody>
-		<% Event.all.each do |resource| %>
+		<% @upcoming_events.each do |resource| %>
+			<tr>
+				<td class=centered><%= resource.id %>
+				<td><%= link_to resource.name, resource%></td>
+				<td class=centered> 
+					<%= link_to resource.creator.name, resource.creator %>
+				</td>
+				<td class=centered>
+					<%= resource.date %>
+				</td>
+				<td class=centered>
+					<%= resource.attendees.count %>
+				</td>
+			</tr>
+		<% end %>
+	</tbody>
+</table>
+<h2>past events</h2>
+<table>
+	<thead>
+		<tr>
+			<th>id</th>
+			<th>event name</th>
+			<th>created by</th>
+			<th>date</th>
+			<th>participants</th>
+		</tr>
+	</thead>
+	<tbody>
+		<% @prev_events.all.each do |resource| %>
 			<tr>
 				<td class=centered><%= resource.id %>
 				<td><%= link_to resource.name, resource%></td>
