--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,6 +3,7 @@
 	<li>username and event name validations</li>
 	<li>nice css</li>
 	<li>clean all the tables mess</li>
+	<li>order events by date</li>
 </ul>
 
 <h1> all users </h1>
